Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Z16.out
Z16.java:13:27: compiler.err.cant.resolve.location: kindname.variable, redx, , , (compiler.misc.location: kindname.annotation, Colored, null)
1 error
